--- a/source/01_python/ch03_데이터 구조.ipynb
+++ b/source/01_python/ch03_데이터 구조.ipynb
@@ -2081,13 +2081,13 @@
     }
    ],
    "source": [
-    "# 위의 if문을 조건식을 이용하여 한 줄 코드\n",
+    "#위의 if문을 조건식을 이용하여 한 줄 코드\n",
     "def diff(x, y):\n",
     "    return x-y if x>y else y-x # if문이 참일 때 값 if 조건 else if문 거짓일 때 값\n",
-    "#     if x>y:\n",
-    "#         return x-y\n",
-    "#     else:\n",
-    "#         return y-x\n",
+    "#if x>y:\n",
+    "    #return x-y\n",
+    "#else:\n",
+    "    #return y-x\n",
     "diff(10, 20)"
    ]
   },
@@ -2109,9 +2109,9 @@
    ],
    "source": [
     "numbers = (1, 2, 3)\n",
-    "print(numbers + numbers)  # 연결\n",
-    "print(3 * numbers) # 반복\n",
-    "print(numbers * 3) # 반복"
+    "print(numbers + numbers)  #연결\n",
+    "print(3 * numbers) #반복\n",
+    "print(numbers * 3) #반복"
    ]
   },
   {
@@ -2132,7 +2132,7 @@
     }
    ],
    "source": [
-    "# ex. 짝수 요소들을 추출하여 제곱한 데이터를 튜플로 출력하시오\n",
+    "#ex. 짝수 요소들을 추출하여 제곱한 데이터를 튜플로 출력하시오\n",
     "numbers = (11, 2, 3, 4, 5, 6)\n",
     "tuple(num**2 for num in numbers if num%2==0)"
    ]
@@ -2188,7 +2188,7 @@
     }
    ],
    "source": [
-    "len(dic) # 데이터 요소의 갯수"
+    "len(dic) #데이터 요소의 갯수"
    ]
   },
   {
@@ -2229,7 +2229,7 @@
     }
    ],
    "source": [
-    "# 변수[키] / 변수.get(키)\n",
+    "#변수[키] / 변수.get(키)\n",
     "print(my_favorite['number'])\n",
     "print(my_favorite.get('number'))"
    ]
@@ -2250,9 +2250,9 @@
     }
    ],
    "source": [
-    "# print(my_favorite['people']) # 키목록에 없는 데이터를 참조 시 에러\n",
-    "print(my_favorite.get('people')) # 없는 키를 get함수로 참조 시 None\n",
-    "print(my_favorite.get('people', '-')) # 없는 키를 get함수로 참조 시 '-'"
+    "#print(my_favorite['people']) #키목록에 없는 데이터를 참조 시 에러\n",
+    "print(my_favorite.get('people')) #없는 키를 get함수로 참조 시 None\n",
+    "print(my_favorite.get('people', '-')) #없는 키를 get함수로 참조 시 '-'"
    ]
   },
   {
@@ -2333,7 +2333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for문을 이용한 튜플 출력\n",
+    "#for문을 이용한 튜플 출력\n",
     "my_tuple = ('홍길동', 30, '010-9999-9999')"
    ]
   },
@@ -2563,7 +2563,7 @@
     }
    ],
    "source": [
-    "# tuple, list, set\n",
+    "#tuple, list, set\n",
     "t = (10, 20, 30)\n",
     "30 in t # list, tuple, set에서의 in연산자 : 요소(데이터, item)가 있는지 여부 반환"
    ]
@@ -2586,7 +2586,7 @@
     }
    ],
    "source": [
-    "# dictionary\n",
+    "#dictionary\n",
     "dic = {'name':'홍길동', 'age':30}\n",
     "'홍길동' in dic # dictionary에서의 in연산자 : key가 있는지 여부 반환"
    ]
@@ -2636,7 +2636,7 @@
     }
    ],
    "source": [
-    "# 할당\n",
+    "#할당\n",
     "my_favorite = {'fruit':'apple', 'number':12}\n",
     "new_favorite = my_favorite\n",
     "print('my_favorite 주소 :', id(my_favorite))\n",
@@ -2647,7 +2647,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "ec796a5f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2683,7 +2685,7 @@
     }
    ],
    "source": [
-    "# 복제(깊은 복사)\n",
+    "#복제(깊은 복사)\n",
     "my_favorite = {'fruit':'apple', 'number':12}\n",
     "new_favorite = my_favorite.copy()\n",
     "print('my_favorite 주소 :', id(my_favorite))\n",
@@ -2843,7 +2845,7 @@
     }
    ],
    "source": [
-    "# 1이 set에 있는 상태에서 True 추가\n",
+    "#1이 set에 있는 상태에서 True 추가\n",
     "s = {1, 2, 3, 1, 1}\n",
     "s.add(True)\n",
     "print(\"True add후 :\", s)"
@@ -2864,7 +2866,7 @@
     }
    ],
    "source": [
-    "# 0이 set에 있는 상태에서 False 추가\n",
+    "#0이 set에 있는 상태에서 False 추가\n",
     "s = {False, 1, 2}\n",
     "s.add(0)\n",
     "print(\"0 add 후 :\", s)"
