--- a/source/01_python/ch07_객체지향 프로그래밍.ipynb
+++ b/source/01_python/ch07_객체지향 프로그래밍.ipynb
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "21f29b4c",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "d50eef09",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
+   "id": "a3e6d294",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "예외 메시지",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0mTraceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mshp1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalc_area\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[3], line 13\u001b[0m, in \u001b[0;36mShape.calc_area\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalc_area\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m예외 메시지\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: 예외 메시지"
+     ]
+    }
+   ],
+   "source": [
+    "shp1.calc_area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "2cd424d5",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "6a705d85",
    "metadata": {},
    "outputs": [
