DNN & CNN - MNIST 이미지 처리

--- a/source/05_DeepLearning/ch08_MNIST(손글씨데이터)_DNN(딥러닝).ipynb
+++ b/source/05_DeepLearning/ch08_MNIST(손글씨데이터)_DNN(딥러닝).ipynb
@@ -79,7 +79,7 @@
     "from tensorflow.keras.datasets import mnist # mnist 훈련셋/테스트셋\n",
     "from tensorflow.keras.utils import to_categorical # 원핫인코딩\n",
     "from tensorflow.keras.models import Sequential, save_model, load_model\n",
-    "from tensorflow.keras.layers import Dense, Input, Dropout, LeakyReLU\n",
+    "from tensorflow.keras.layers import Dense, Input, Dropout, LeakyReLU, ELU, ReLU\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -715,13 +715,7 @@
       "7/7 [==============================] - 0s 7ms/step - loss: 1.5337 - accuracy: 0.4229 - val_loss: 1.5462 - val_accuracy: 0.3833\n",
       "Epoch 58/200\n",
       "7/7 [==============================] - 0s 3ms/step - loss: 1.5282 - accuracy: 0.4200 - val_loss: 1.5417 - val_accuracy: 0.3800\n",
-      "Epoch 59/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 59/200\n",
       "7/7 [==============================] - 0s 6ms/step - loss: 1.5218 - accuracy: 0.4229 - val_loss: 1.5378 - val_accuracy: 0.3833\n",
       "Epoch 60/200\n",
       "7/7 [==============================] - 0s 5ms/step - loss: 1.5165 - accuracy: 0.4271 - val_loss: 1.5336 - val_accuracy: 0.3833\n",
@@ -959,13 +953,7 @@
       "7/7 [==============================] - 0s 5ms/step - loss: 1.1115 - accuracy: 0.5986 - val_loss: 1.2766 - val_accuracy: 0.5067\n",
       "Epoch 174/200\n",
       "7/7 [==============================] - 0s 5ms/step - loss: 1.1102 - accuracy: 0.6029 - val_loss: 1.2786 - val_accuracy: 0.5200\n",
-      "Epoch 175/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 175/200\n",
       "7/7 [==============================] - 0s 5ms/step - loss: 1.1065 - accuracy: 0.6000 - val_loss: 1.2734 - val_accuracy: 0.4933\n",
       "Epoch 176/200\n",
       "7/7 [==============================] - 0s 5ms/step - loss: 1.1061 - accuracy: 0.6014 - val_loss: 1.2738 - val_accuracy: 0.5067\n",
@@ -2281,13 +2269,7 @@
       "1/7 [===>..........................] - ETA: 0s - loss: 1.8142 - accuracy: 0.2300\n",
       "Epoch 26: val_accuracy did not improve from 0.31333\n",
       "7/7 [==============================] - 0s 6ms/step - loss: 1.7813 - accuracy: 0.2929 - val_loss: 1.8015 - val_accuracy: 0.3133\n",
-      "Epoch 27/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 27/200\n",
       "1/7 [===>..........................] - ETA: 0s - loss: 1.7364 - accuracy: 0.3000\n",
       "Epoch 27: val_accuracy did not improve from 0.31333\n",
       "7/7 [==============================] - 0s 7ms/step - loss: 1.7731 - accuracy: 0.2929 - val_loss: 1.7963 - val_accuracy: 0.3100\n",
@@ -2521,13 +2503,7 @@
       "1/7 [===>..........................] - ETA: 0s - loss: 1.4425 - accuracy: 0.4600\n",
       "Epoch 83: val_accuracy did not improve from 0.39667\n",
       "7/7 [==============================] - 0s 6ms/step - loss: 1.4961 - accuracy: 0.4643 - val_loss: 1.6143 - val_accuracy: 0.3967\n",
-      "Epoch 84/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/200\n",
       "1/7 [===>..........................] - ETA: 0s - loss: 1.5889 - accuracy: 0.4500\n",
       "Epoch 84: val_accuracy did not improve from 0.39667\n",
       "7/7 [==============================] - 0s 6ms/step - loss: 1.4929 - accuracy: 0.4614 - val_loss: 1.6136 - val_accuracy: 0.3967\n",
