LSTM 영화평감상분석

--- a/source/05_DeepLearning/ch10_Iris_다중분류(타깃변수원핫인코딩O).ipynb
+++ b/source/05_DeepLearning/ch10_Iris_다중분류(타깃변수원핫인코딩O).ipynb
@@ -566,13 +566,7 @@
       "1/1 [==============================] - 0s 19ms/step - loss: 0.0899 - accuracy: 0.9792 - val_loss: 0.0552 - val_accuracy: 1.0000\n",
       "Epoch 58/200\n",
       "1/1 [==============================] - 0s 34ms/step - loss: 0.0870 - accuracy: 0.9792 - val_loss: 0.0527 - val_accuracy: 1.0000\n",
-      "Epoch 59/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 59/200\n",
       "1/1 [==============================] - 0s 27ms/step - loss: 0.0843 - accuracy: 0.9792 - val_loss: 0.0504 - val_accuracy: 1.0000\n",
       "Epoch 60/200\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0817 - accuracy: 0.9792 - val_loss: 0.0482 - val_accuracy: 1.0000\n",
