--- a/source/05_DeepLearning/ch06_피마인디언_당뇨병발병_예측실습(로지스틱회귀분석, 분류분석).ipynb
+++ b/source/05_DeepLearning/ch06_피마인디언_당뇨병발병_예측실습(로지스틱회귀분석, 분류분석).ipynb
@@ -1305,13 +1305,7 @@
       "19/19 [==============================] - 0s 2ms/step - loss: 0.5233 - accuracy: 0.7433 - val_loss: 0.5959 - val_accuracy: 0.7000\n",
       "Epoch 115/200\n",
       "19/19 [==============================] - 0s 2ms/step - loss: 0.5165 - accuracy: 0.7333 - val_loss: 0.6077 - val_accuracy: 0.7100\n",
-      "Epoch 116/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 116/200\n",
       "19/19 [==============================] - 0s 3ms/step - loss: 0.5245 - accuracy: 0.7433 - val_loss: 0.6291 - val_accuracy: 0.6800\n",
       "Epoch 117/200\n",
       "19/19 [==============================] - 0s 2ms/step - loss: 0.5191 - accuracy: 0.7533 - val_loss: 0.6083 - val_accuracy: 0.6900\n",
