OpenAI Chat Completion API

--- a/source/08_LLM/ch2_Ollama_LLM활용의기본개념(LangChain).ipynb
+++ b/source/08_LLM/ch2_Ollama_LLM활용의기본개념(LangChain).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "72acfc68",
    "metadata": {},
    "outputs": [
@@ -1007,6 +1007,138 @@
     ")\n",
     "output_parser.invoke(llm.invoke(country_prompt.invoke({'information':'이 나라는 와인으로 유명해.'})))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "373a664e",
+   "metadata": {},
+   "source": [
+    "# 5. 생성형 AI 평가: 나라 이름 입력 시 해당 국가 유명 음식의 레시피를 출력하는 복합체인 구현\n",
+    "- 위: 나라 설명 → 나라 이름 → 나라 수도 (체인 2개 연결)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27e1c964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 복합체인 : 나라 이름 → 그 나라에서 유명한 음식(#1 food_chain)\n",
+    "#               음식 → 레시피(#2 recipe_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84a2bb81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "defe87f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36a49400",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "161269ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70f3ac70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65a391e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6622df1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a66a59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c0588d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "806121f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4b474b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1d5f084",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d29cd511",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "439713fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
