OpenAI API - DALL-E, TTS, Whisper

--- a/source/08_LLM/ch3_OpenAI_Chat_Completions_API.ipynb
+++ b/source/08_LLM/ch3_OpenAI_Chat_Completions_API.ipynb
@@ -811,100 +811,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "124d69b6",
+   "cell_type": "markdown",
+   "id": "499b8794",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 선생님 코드"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f31a5d3",
+   "id": "0b5edfa1",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd6b85b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "881fde6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "679b07f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b08e00c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "047bbc50",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "443f0e79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d65ef02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd38f9d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc434b29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6781c780",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI, OpenAIError\n",
+    "load_dotenv()\n",
+    "client = OpenAI()\n",
+    "# 대화 이력 저장할 리스트 초기화\n",
+    "chat_history = [\n",
+    "    {'role':\"system\", \"content\":\"당신은 유능한 AI 상담원입니다\"}\n",
+    "]\n",
+    "print(\"쳇봇 시작(종료:bye, exit, quit, 종료)\")\n",
+    "while True:\n",
+    "    user_input = input(\"사용자 :\").strip()\n",
+    "    if user_input.lower() in [\"exit\", \"bye\", \"quit\", \"종료\"]:\n",
+    "        print(\"쳇봇 종료\")\n",
+    "        break;\n",
+    "    # 사용자 input(질문)을 chat_history에 append\n",
+    "    chat_history.append({\"role\":\"user\", \"content\":user_input})\n",
+    "    try:\n",
+    "        # open ai API 호출\n",
+    "        response = client.chat.completions.create(\n",
+    "            model = 'gpt-4.1-nano',\n",
+    "            messages=chat_history\n",
+    "        )\n",
+    "    except OpenAIError as e:\n",
+    "        print(\"오류 발생. 다시 시작해 보세요:\", e)\n",
+    "        break\n",
+    "    # 답변 출력 및 chat_history에 append\n",
+    "    assistant_reply = response.choices[0].message.content.strip()\n",
+    "    print(\"AI 응답 :\", assistant_reply)\n",
+    "    chat_history.append({\"role\":\"assistant\", \"content\":assistant_reply})"
+   ]
   }
  ],
  "metadata": {
@@ -938,10 +888,10 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "169px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
