OpenAI API Assistants, FunctionCalling

--- a/source/08_LLM/ch6_OpenAI_Whisper_API.ipynb
+++ b/source/08_LLM/ch6_OpenAI_Whisper_API.ipynb
@@ -603,7 +603,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "1bb81ec4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -627,6 +629,119 @@
    "source": [
     "from IPython.display import Audio\n",
     "Audio('data/ch06_quiz.mp3', autoplay=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d44378ff",
+   "metadata": {},
+   "source": [
+    "### 선생님 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0970f80d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI\n",
+    "import os\n",
+    "load_dotenv()\n",
+    "client = OpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbbb9afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/ch06_quiz.txt', encoding='utf-8') as f:\n",
+    "    lines = f.readlines()\n",
+    "lines = [line.replace('\\n', '') for line in lines]\n",
+    "input_text = ''.join(lines)\n",
+    "print('요약할 내용 :', input_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "214c24ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 사용자 메세지 구성\n",
+    "messages = [\n",
+    "    {\"role\":\"user\", \"content\":f\"다음의 내용을 70자 이내로 요약해 줘 {input_text}\"}\n",
+    "]\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"gpt-4.1-nano\",\n",
+    "    messages=messages,\n",
+    "    temperature=0.7, # 0~2 : 일관적~창의적(예측을 벗어난)\n",
+    ")\n",
+    "assistant_reply = response.choices[0].message.content\n",
+    "print(\"AI 요약 :\", assistant_reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47df133e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.usage # 입력 토큰 :225 / 출력토큰 : 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "080662cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_ko = client.audio.speech.create(\n",
+    "    model='tts-1',\n",
+    "    voice='nova',\n",
+    "    input=assistant_reply,\n",
+    "    speed=0.9\n",
+    ")\n",
+    "audio_data = response_ko.content\n",
+    "print('오디오 데이터 크기 :', len(audio_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2ac1ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/ch06_quiz.mp3', 'wb') as f:\n",
+    "    f.write(audio_data)\n",
+    "    print('요약 정보 mp3 저장 완료')\n",
+    "from IPython.display import Audio\n",
+    "Audio(filename='data/ch06_quiz.mp3', autoplay=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1607b258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 파일 삭제\n",
+    "import os\n",
+    "try:\n",
+    "    os.remove('data/ch06_quiz.mp3')\n",
+    "    print('요약 정보 mp3 삭제완료')\n",
+    "except:\n",
+    "    print('요약 정보 mp3를 못 찾음')"
    ]
   }
  ],
@@ -657,7 +772,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "185.594px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
