--- a/source/08_LLM/ch9.06_LangChain과 vectorDatabase을 활용한 RAG구현.ipynb
+++ b/source/08_LLM/ch9.06_LangChain과 vectorDatabase을 활용한 RAG구현.ipynb
@@ -1009,7 +1009,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm(ipykernel)",
+   "display_name": "llm (ipykernel)",
    "language": "python",
    "name": "llm"
   },
@@ -1041,7 +1041,7 @@
     "width": "165px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
